restructure packages
Modified-by: leher <vleher@gmail.com>